# Buscador-de-Raices

./: README.md
BuscaRaices/: CMakeLists.txt  Ecuacion.cpp  Ecuacion.h  main.cpp
BuscaRaices/Archivos de encabezado/: Ecuacion.h
BuscaRaices/Archivos de origen/: Ecucacion.cpp
